--- a/Frontend/crudee/package.json
+++ b/Frontend/crudee/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "firebase": "^9.6.10",
+    "axios": "^1.6.2",
+    "firebase": "^9.23.0",
     "react": "18",
     "react-dom": "18",
     "react-router-dom": "^6.3.0",
